--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -71,16 +71,6 @@ jobs:
       MAKEFLAGS: "--jobs=3 QUICK_BUILD=1"
     container: ${{ matrix.container_image }}
     steps:
-      # NOTE - alot of these steps needlessly complicated by needing to do lots of cleans between steps
-      # to reduce space usage, since often runs out of space
-      # - name: Maximize build space
-      #   uses: easimon/maximize-build-space@master
-      #   with:
-      #     swap-size-mb: 1024
-      #     remove-dotnet: 'true'
-      #     remove-android: 'true'
-      #     remove-haskell: 'true'
-      #     remove-codeql: 'true'
       - uses: actions/checkout@v3
       - name: Build System Info
         run: |
@@ -110,13 +100,12 @@ jobs:
           make run-tests
       - name: Save space
         run: |
-          echo "before save space"
+          echo "Before save space"
           df -h
           du -hs Builds/*/* IntermediateFiles/*/*
           make --directory Tests clobber
           df -h
           du -hs Builds/*/* IntermediateFiles/*/*
-          du -hs IntermediateFiles/*/Library/*
       - name: Make tools & samples
         run: |
           make tools samples
