--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -89,8 +89,8 @@ jobs:
           du -hs /usr/share/* || true
           du -hs /__w/* || true
           rm -rf /usr/doc /usr/doc-base /usr/share/icons /usr/share/javascript || true
-          df -h
-          ls -l .
+          rm -rf Archive
+          ls -la .
           rm -rf .git
           df -h
       - name: Configure ${{ matrix.config_name }}
