hacks to save space on github actions

--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -88,8 +88,8 @@ jobs:
           du -hs /usr/* || true
           du -hs /usr/share/* || true
           du -hs /__w/* || true
-          du -hs /usr/doc /usr/doc-base /usr/share/icons /usr/share/javascript Archive .git
-          rm -rf /usr/doc /usr/doc-base /usr/share/icons /usr/share/javascript || true
+          du -hs /usr/share/doc /usr/share/doc-base /usr/share/icons /usr/share/javascript Archive .git || true
+          rm -rf /usr/share/doc /usr/share/doc-base /usr/share/icons /usr/share/javascript || true
           rm -rf Archive
           rm -rf .git
           ls -la .
