--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -88,10 +88,11 @@ jobs:
           #du -hs /usr/* || true
           #du -hs /usr/share/* || true
           #du -hs /__w/* || true
+          echo Deleting:
           du -hs /usr/share/doc /usr/share/doc-base /usr/share/icons /usr/share/javascript /usr/share/fonts-droid-fallback /usr/share/X11 || true
           du -hs Archive .git
-          rm -rf /usr/share/doc /usr/share/doc-base /usr/share/icons /usr/share/javascript /usr/share/fonts-droid-fallback /usr/share/X11 || true
-          rm -rf Archive .git
+          rm -r /usr/share/doc /usr/share/doc-base /usr/share/icons /usr/share/javascript /usr/share/fonts-droid-fallback /usr/share/X11 || echo "Issue deleting incomplete"
+          rm -rf Archive .git || echo "Issue deleting incomplete"
           #ls -la .
           df -h
       - name: Configure ${{ matrix.config_name }}
