hopefully fix macos github action to archive logs in the event of failure

--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -194,10 +194,12 @@ jobs:
         run: |
           make run-tests
       - name: Workaround GitHub-Actions-MacOS Issue with env.TMPDIR
+        if: always()
         run: |
           mkdir /tmp/LOGS-ARCHIVE
           cp $TMPDIR/Trace*.txt /tmp/LOGS-ARCHIVE
       - name: DEBUG Workaround GitHub-Actions-MacOS Issue with env.TMPDIR
+        if: always()
         run: |
           echo "TMPDIR=$TMPDIR"
           echo "TMPDIR using ENV.TMPDIR=${{ env.TMPDIR }}"
